# timesfm-cn-forecast-clean

./: .gitignore  README.md  fengzhi_.txt  pyproject.toml  requirements.txt  run_nightly.sh  run_nightly_reverse.sh  run_script.sh
code/: README_update.md  add_new_stocks.py  check_db.py  check_recency.py  duckdb_ingest.py  duckdb_update.py  te.py  update_manager.py
data/: ab_test_targets.json  concept_category.csv  index.duckdb  index_market.duckdb  industry_category.csv  market.duckdb  resonance_clusters.json
doc/: architecture_and_research_design.md  detailed_next_steps_plan.md  fast_1d_roi_design.md  merged_research_summary.md  refactor_architecture_design.md  seed_companion_group_technical_design.md  seed_companion_group_workitems.md  supernode_companion_strategy.md
index_code/: DATA_VERIFICATION_REPORT.md  DESIGN.md  README_index.md  check_index_db.py  full_import.py  index_ingest.py  index_manager.py  index_update.py  query_examples.py  quick_import.sh  quick_verify.py  sql_examples.sql  usage_example.py
scripts/: _env.sh  build_seed_companion_groups.py  generate_resonance_clusters.py  merge_seed_candidates.py  run_ab_test.sh  run_all_groups_eval.sh  run_all_groups_eval_reverse.sh  run_all_seeds_batch.sh  run_all_seeds_batch_expanded.sh  run_baseline_all_groups.sh  run_baseline_extended.sh  run_census_task.sh  run_daily_predict.sh  run_daily_weights.sh  run_fast_track_discovery.sh  run_final_census_v3.sh  run_group_experiment_matrix.sh  run_industry_concept_eval.sh  run_massive_experiment_v2.sh  run_one_group_eval.sh  run_precision_v3.sh  run_resonance_v2.sh  (+6 more)
(+59 files in other folders)
